# conerobo

./: .gitignore  Cargo.toml  README.md
bindings/: build.rs
docs/: ConeRobo-UserManual.tex
docs/ConeRobo-UserManual/: ConeRobo-UserManual.tex  README.md
parts/: server.lua  test.lua  test2.lua
src/: accuracy_score.rs  app.yml  boot.py  capture.rs  classifier.rs  cli.rs  color.py  error.rs  index.html  lua2rust.rs  main.py  main.rs  mainscene.py  mnist.rs  parts.rs  perceptron.rs  random_ai.rs  scenebase.py  style.css
src/component/test/: print_name.lisp
src/component/transpiler/: transpiler.lisp
src/editor_page/: filebar.rs  mod.rs
src/editor_screen/: filebar.rs  mod.rs
src/file_management/: mod.rs
src/gui/: mod.rs
src/gui/editor_page/: editor.rs  filebar.rs  mod.rs
src/gui/navigation_bar/: mod.rs
src/gui/welcome_page/: document.rs
src/input/: mod.rs
src/navigation_bar/: file.rs  mod.rs
src/paddle_game/: components.rs  mod.rs  setup.rs
src/tui/: app.rs  display.rs  menu.rs  mod.rs  raw_mode_guard.rs  ui.rs  util.rs
src/tui_util/: app.rs  backend.rs  mod.rs  ui.rs
src/ui/: editor.rs  menubar.rs  mod.rs
src/utils/: dropdown.rs  mod.rs
src/welcome_page/: document.rs  mod.rs
src/welcome_screen/: document.rs  mod.rs
temp/input/: mod.rs
temp/ui/: editor.rs  mod.rs
test/: newtestfile.py  testfile.py
