[package]
name = "conerobo_tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.17.1"
crossterm = "0.22.1"
tui = { version = "0.16.0", default-features = false, features = ['crossterm'] }
unicode-width = "0.1.9"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
